--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+
+spring.output.ansi.enabled = DETECT
+logging.file=./springboot.log
+logging.level.org.springframework.web=DEBUG
